--- a/.github/workflows/release-ruby.yaml
+++ b/.github/workflows/release-ruby.yaml
@@ -10,84 +10,20 @@ on:
     tags:
       - ruby/*
 jobs:
-  release-ruby:
-    strategy:
-      matrix:
-        flavor: ["", "-slim"]
-        include:
-          - version: 3.2.0
-            target_version: 3_2_0
-          - version: 3.2.2
-            target_version: 3_2_2
-        exclude:
-          - flavor: "-slim"
-            version: 3.2.2
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref,  format('refs/tags/ruby/{0}+', matrix.version))
-        uses: actions/checkout@v3
-      - name: Build Ruby
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))
-        run: make ruby/v${{ matrix.target_version }}${{ matrix.flavor }}
-      - name: Rename release artifacts
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))
-        shell: bash
-        run: |
-          sudo mv build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/ruby{,-${{ matrix.version }}${{ matrix.flavor }}}.wasm
-      - name: Create release
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create --generate-notes ${{ github.ref_name }} || true
-      - name: Append Ruby release assets
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} \
-            build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/*.wasm
-      - name: Generate release assets digests
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          for asset in build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/*.wasm; do
-            sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
-          done
-      - name: Append release assets digests
-        # Only run for the Ruby version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} \
-            build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/*.sha256sum
+  build-default:
+    uses: ./.github/workflows/reusable-build-runtime-flavor.yaml
+    with:
+      target-name: "ruby"
+      trigger: ${{ github.event.ref }}
+      flavor: ""
+  build-slim:
+    uses: ./.github/workflows/reusable-build-runtime-flavor.yaml
+    with:
+      target-name: "ruby"
+      trigger: ${{ github.event.ref }}
+      flavor: "-slim"
+  publish:
+    uses: ./.github/workflows/reusable-publish-assets.yaml
+    needs: [build-default, build-slim]
+    with:
+      target-name: "ruby"
