--- a/.github/workflows/release-php.yaml
+++ b/.github/workflows/release-php.yaml
@@ -10,111 +10,26 @@ on:
     tags:
       - php/*
 jobs:
-  release-php:
-    strategy:
-      matrix:
-        # TODO (ereslibre): the PHP cli is conditionally compiled
-        # because it has the ability to open a listening socket-- only
-        # supported on wasmedge --. Remove build-php-cli from here and
-        # make the PHP CLI conditionally compile local server code out
-        # on all versions.
-        include:
-          - flavor: ""
-            build-php-cli: false
-            version: 8.1.11
-          - flavor: ""
-            build-php-cli: false
-            version: 8.2.0
-          - flavor: "-wasmedge"
-            build-php-cli: true
-            version: 8.2.0
-          - flavor: -slim
-            build-php-cli: false
-            version: 8.2.0
-          - flavor: ""
-            build-php-cli: false
-            version: 8.2.6
-          - flavor: "-wasmedge"
-            build-php-cli: true
-            version: 8.2.6
-          - flavor: "-slim"
-            build-php-cli: false
-            version: 8.2.6
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref,  format('refs/tags/php/{0}+', matrix.version))
-        uses: actions/checkout@v3
-      - name: Build PHP
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version))
-        run: make php/php-${{ matrix.version }}${{ matrix.flavor }}
-      - name: Rename CGI release artifacts
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version))
-        shell: bash
-        run: |
-          sudo mv build-output/php/php-${{ matrix.version }}${{ matrix.flavor }}/bin/php-cgi{,-${{ matrix.version }}}${{ matrix.flavor }}.wasm
-      - name: Rename CLI release artifacts
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version)) && matrix.build-php-cli }}
-        shell: bash
-        run: |
-          sudo mv build-output/php/php-${{ matrix.version }}${{ matrix.flavor }}/bin/php{,-${{ matrix.version }}}${{ matrix.flavor }}.wasm
-      - name: Create release
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version))
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create --generate-notes ${{ github.ref_name }} || true
-      - name: Append PHP release assets
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} \
-            build-output/php/php-${{ matrix.version }}${{ matrix.flavor }}/bin/*.wasm
-      - name: Generate release assets digests
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          for asset in build-output/php/php-${{ matrix.version }}${{ matrix.flavor }}/bin/*.wasm; do
-            sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
-          done
-      - name: Append release assets digests
-        # Only run for the PHP version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/php/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} \
-            build-output/php/php-${{ matrix.version }}${{ matrix.flavor }}/bin/*.sha256sum
+  build-default:
+    uses: ./.github/workflows/reusable-build-runtime-flavor.yaml
+    with:
+      target-name: "php"
+      trigger: ${{ github.event.ref }}
+      flavor: ""
+  build-wasmedge:
+    uses: ./.github/workflows/reusable-build-runtime-flavor.yaml
+    with:
+      target-name: "php"
+      trigger: ${{ github.event.ref }}
+      flavor: "-wasmedge"
+  build-slim:
+    uses: ./.github/workflows/reusable-build-runtime-flavor.yaml
+    with:
+      target-name: "php"
+      trigger: ${{ github.event.ref }}
+      flavor: "-slim"
+  publish:
+    uses: ./.github/workflows/reusable-publish-assets.yaml
+    needs: [build-default, build-wasmedge, build-slim]
+    with:
+      target-name: "php"
